--- a/www/index.html
+++ b/www/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="css/app.min.css" />
     <link rel="stylesheet" href="css/responsive.min.css" />
     
-    <script src="js/app.min.js"></script>
+    <script src="js/app.min.js?v=8"></script>
   </head>
   <body ng-app="Coffee" ng-controller="MainController">
     <div class="app">
