--- a/www/index.html
+++ b/www/index.html
@@ -11,7 +11,8 @@
     <link rel="stylesheet" href="css/app.min.css" />
     <link rel="stylesheet" href="css/responsive.min.css" />
     
-    <script src="js/app.min.js?v=8"></script>
+    <script src="http://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>
+    <script src="js/app.min.js?a=3"></script>
   </head>
   <body ng-app="Coffee" ng-controller="MainController">
     <div class="app">
